<resources>
    <string name="app_name">第三学堂</string>
    <string name="home">首页</string>
    <string name="oneonone">线下课程</string>
    <string name="onlineclass">在线课堂</string>
    <string name="mine">我的</string>
    <string name="now_buy">立即购买</string>
    <string name="home_teacher_subject">科目阶段：小学/初中 语文\n 授课区域：徐家汇  嘉定区</string>
    <string name="home_seach">没有搜索到相关信息哦！</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="exit_user">退出当前帐号</string>
    <string name="apply_ithdraw">申请提现</string>
    <string name="amount">冻结中金额</string>
    <string name="withdrawal">可提现金额</string>
    <string name="amount_freezing">0.00</string>
    <string name="download_title">正在下载新版本</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
