<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    android:orientation="vertical">

    <com.main.disanxuelib.view.CommonCrosswiseBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/color_ffffff"
        app:left_button_image="@mipmap/ic_black_left_arrow"
        app:show_left_button="true"
        app:isTopBar="true"
        app:title_text="我的钱包"
        app:title_textColor="@color/color_333333"
        app:right_button_text="银行卡"
        app:right_button_textColor="@color/color_ffae12"
        app:right_button_textSize="@dimen/size_17px"
        app:title_textSize="@dimen/size_18px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="25dp">

            <TextView
                android:id="@+id/tv_withdrawal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_ffae12"
                tools:text="金额"
                android:textSize="@dimen/size_15sp" />

            <TextView
                android:id="@+id/tv_withdrawal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                tools:text="可提现金额"
                android:text="@string/withdrawal"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/size_10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_amount_freezing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_freezing"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/size_13sp" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                tools:text="冻结中金额"
                android:text="@string/amount"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/size_10sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/background_color" />

        <TextView
            android:id="@+id/tv_apply_ithdraw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            tools:text="申请提现"
            android:text="@string/apply_ithdraw"
            android:textColor="@color/color_ffae12"
            android:textSize="@dimen/size_13sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="(提交申请后，金额将被冻结，1-3个工作日内\n由客服联系您操作。"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/size_10sp" />

    <com.main.disanxuelib.view.CommonCrosswiseBar
        android:id="@+id/ccb_wallet_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_background="@color/background_color"
        app:left_button_text="资金记录"
        app:left_button_textColor="@color/color_333333"
        app:left_button_textSize="14px"
        app:right_button_image="@mipmap/ic_black_down_arrow"
        app:right_button_textColor="@color/color_ffae12"
        app:right_button_textSize="13px"
        app:show_line="false"
        app:show_right_button="true" />

    <com.main.disanxuelib.view.RefreshCommonView
        android:id="@+id/rv_mine_wallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        app:orientation="vertical"
        app:vessel_type="RecyclerView"
        android:background="@color/color_ffffff"
        app:noneText="暂无资金记录！"
        app:bottonViewText="我是有底线的~~~"
        app:noneImage="@mipmap/ic_norecord"
        />


</LinearLayout>
